# soundtouch-android

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/qingmei2/soundtouch/: MainActivity.java  RecordActivity.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
lib-soundtouch/: build.gradle
lib-soundtouch-android/: build.gradle
lib-soundtouch-android/src/main/: AndroidManifest.xml
lib-soundtouch-android/src/main/java/com/github/qingmei2/soundtouch/: AACFileAudioSink.java  AudioDecoder.java  AudioEncoder.java  AudioSink.java  AudioTrackAudioSink.java  MediaCodecAudioDecoder.java  MediaCodecAudioEncoder.java  OnProgressChangedListener.java  SoundStreamAduioRecorder.java  SoundStreamAudioPlayer.java  SoundStreamDecoderException.java  SoundStreamFileWriter.java  SoundStreamRunnable.java  SoundStreamRuntimeException.java
lib-soundtouch/src/main/: AndroidManifest.xml
lib-soundtouch/src/main/cpp/: CMakeLists.txt  soundtouch-jni.cpp
lib-soundtouch/src/main/cpp/soundtouch/source/Android-lib/: AndroidManifest.xml  build.gradle  local.properties
lib-soundtouch/src/main/java/com/github/qingmei2/soundtouch/: AudioProcessor.java  SoundTouch.java
